--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <script id="employee-tpl" type="text/x-handlebars-template">
     <div class='header'><a href='#' class="button header-button header-button-left">Back</a><h1>Details</h1></div>
     <div class='details'>
-    <img id='image' src='{{firstName}}.jpg' style="float:left;margin:10px;height:100px"/>
+    <img id='image' src='img/{{firstName}}.png' style="float:left;margin:10px;height:100px"/>
     <h1>{{firstName}} {{lastName}}</h1>
     <h2>{{title}}</h2>
     <span class="location"></span>
