--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,8 @@
     <div class='header'><h1>Takka Team</h1></div>
     <div class='search-bar'><input class='search-key' type="search"/></div>
     <div class="scroll"><ul class='employee-list'></ul></div>
+    <div id="accelerometer"></div>
+    <canvas id="canvas"></canvas>
 </script>
 
 <script id="employee-li-tpl" type="text/x-handlebars-template">
@@ -33,14 +35,15 @@
     </ul>
     </div>
 </script>
-
-<script src="phonegap.js"></script>
+    
+<script type="text/javascript" charset="utf-8" src="cordova-2.0.0.js"></script>
 <script src="lib/jquery-1.8.2.min.js"></script>
 <script src="lib/handlebars.js"></script>
-<script src="js/storage/memory-store.js"></script>
+<script src="js/storage/ls-store.js"></script>
 <script src="js/HomeView.js"></script>
 <script src="js/EmployeeView.js"></script>
 <script src="js/main.js"></script>
+<script type="text/javascript" src="js/particals.js"></script>
 
 </body>
 </html>
