--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
     <div class='search-bar'><input class='search-key' type="search"/></div>
     <div class="scroll"><ul class='employee-list'></ul></div>
     <div id="accelerometer"></div>
-    <canvas id="canvas"></canvas>
+    <canvas id="particalCanvas"></canvas>
 </script>
 
 <script id="employee-li-tpl" type="text/x-handlebars-template">
